# ai-print-ready-poc

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docs-icc-profile-strategy.md  docs-zeabur-deployment.md  pyproject.toml
.github/workflows/: ci.yml
examples/: create_demo_image.py
scripts/: check_prepress_tools.sh
src/ai_print_ready/: analyzer.py  bleed.py  cli.py  models.py  outputs.py  prepress.py  presets.py  profiles.py  reports.py  tools.py  upscale.py
tests/: test_core.py  test_prepress.py  test_profiles.py  test_upscale.py
